--- a/server/package.json
+++ b/server/package.json
@@ -12,22 +12,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.19",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.8.4",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.19",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.8.4",
     "@types/body-parser": "^1.19.4",
     "@types/cookie-parser": "^1.4.5",
     "@types/cors": "^2.8.15",
+    "@types/jsonwebtoken": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.51.0",
