--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -23,13 +24,13 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.19",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.8.4",
     "@types/body-parser": "^1.19.4",
     "@types/cookie-parser": "^1.4.5",
     "@types/cors": "^2.8.15",
+    "@types/express": "^4.17.19",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.8.4",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.51.0",
