--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,11 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
   },
@@ -27,6 +29,7 @@
     "@types/body-parser": "^1.19.4",
     "@types/cookie-parser": "^1.4.5",
     "@types/cors": "^2.8.15",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.19",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mongoose": "^5.11.97",
