--- a/server/package.json
+++ b/server/package.json
@@ -24,9 +24,10 @@
     "mongoose": "^7.6.2",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.4",
     "@types/cookie-parser": "^1.4.5",
     "@types/cors": "^2.8.15",
@@ -35,6 +36,8 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.8.4",
+    "@types/nodemailer": "^6.4.14",
+    "@types/nodemailer-smtp-transport": "^2.7.8",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.51.0",
