--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
-    "nodemailer": "^6.9.7",
+    "(nodemailer)": "^6.9.7",
     "nodemon": "^3.0.1",
     "typescript": "^5.3.2"
   },
