--- a/server/package.json
+++ b/server/package.json
@@ -22,14 +22,14 @@
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
-    "(nodemailer)": "^6.9.7",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "typescript": "^5.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.4",
-    "@types/cookie-parser": "^1.4.5",
+    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.15",
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.19",
