--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "embla-carousel-react": "^8.0.0-rc17",
     "lucide-react": "^0.298.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
